@@ -9,6 +9,7 @@
  BODY { 
  	background-color:white; 
  	margin-left: 3%; margin-right: 3%; 
+        background-image: url(grid.jpeg);
       }
 
  P    { 
@@ -16,12 +17,14 @@
         margin-left:  0%; 
       }
 
- H1   { text-align: center; text-decoration: underline; }
+ H1   { text-align: center; }
  H3   { color:#009900; margin-left: 0%; }
  H4   { color:#009900; margin-left: 0%; 
  	margin-top: 1em; margin-bottom: 0;
       }
  H5   { color:#006600; margin-left: 3%; font-size:larger; }
+
+ IMG  { border-style: none; }
 
  DT   { 
 	color:#006600;
@@ -33,6 +36,23 @@
 	margin-left: 8%; margin-right: 8%; 
 	margin-top: 3;
       }
+
+ TD.TD0 { 
+ 	font-weight: bold; font-size: 67%; 
+	color:#006600; 
+	padding-top: 0; padding-left: 3em;
+	vertical-align: top;
+	}
+
+ TD.TD1 { 
+ 	font-weight: bold; font-size: 67%; 
+	padding-top: 0;
+	}
+
+ TD.LIMG {
+ 	padding-right: 40pt;
+	vertical-align: top;
+	}
 
  LISTING, PRE 
 	{
